--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.4",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "styled-icons": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
