--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.4",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
+    "reselect": "^3.0.1",
     "styled-components": "^3.3.3",
     "styled-icons": "^2.3.1"
   },
