--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "reselect": "^3.0.1",
+    "shortid": "^2.2.12",
     "styled-components": "^3.3.3",
     "styled-icons": "^2.3.1"
   },
