--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.4",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.12",
     "styled-components": "^3.3.3",
