--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "localforage": "^1.7.2",
     "polished": "^1.9.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -12,6 +14,7 @@
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.12",
     "styled-components": "^3.3.3",
